force-app/main/default/objects/Plan__c/fields/Discretionary_Match__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match__c</fullName>
    <label>Discretionary Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discretionary_Match</valueSetName>
    </valueSet>
</CustomField>