force-app/main/default/objects/Plan__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <externalId>true</externalId>
    <label>EIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>