force-app/main/default/objects/Plan__c/fields/Eligibility_Age__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Age__c</fullName>
    <description>What is the age participants are eligible for the plan?</description>
    <inlineHelpText>What is the age participants are eligible for the plan?</inlineHelpText>
    <label>Eligibility Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>