force-app/main/default/objects/Plan__c/fields/Eligible_Balance_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Balance_Rate_Formula__c</fullName>
    <description>Used to calc eligible balance rate and push to visible/tracking field</description>
    <formula>(Eligible_Employees_w_Balance__c  /   Eligible_Employees__c) *100</formula>
    <inlineHelpText>Used to calc eligible balance rate and push to visible/tracking field</inlineHelpText>
    <label>Eligible Balance Rate Calc</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>