force-app/main/default/objects/Plan__c/fields/Eligible_Employees__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Employees__c</fullName>
    <description>The number of employees that are eligible to participate in the plan</description>
    <inlineHelpText>The number of employees that are eligible to participate in the plan</inlineHelpText>
    <label>Eligible Employees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>