force-app/main/default/objects/Plan__c/fields/Eligible_Employees_w_Balance__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Employees_w_Balance__c</fullName>
    <description>Eligible Employees with a balance - could be Employee and/or Employer contributions</description>
    <inlineHelpText>Eligible Employees with a balance - could be Employee and/or Employer contributions</inlineHelpText>
    <label>Eligible Employees w Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>