force-app/main/default/objects/Plan__c/fields/Employer_Identification_Number_EIN__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number_EIN__c</fullName>
    <formula>Account__r.Employer_Identification_Number_EIN__c</formula>
    <label>Employer Identification Number (EIN)</label>
    <type>Text</type>
</CustomField>