force-app/main/default/objects/Plan__c/fields/End_of_Submitted_Pay_Period__c.field-meta.xml
<CustomField>
    <fullName>End_of_Submitted_Pay_Period__c</fullName>
    <formula>DATEVALUE(TRIM(RIGHT(Most_Recent_Pay_Period_Submitted__c , 10)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End of Submitted Pay Period</label>
    <type>Date</type>
</CustomField>