force-app/main/default/objects/Plan__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <formula>Account__r.Escalated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>