force-app/main/default/objects/Plan__c/fields/Fidelity_Bond_Link__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_Link__c</fullName>
    <description>Updated by automation team</description>
    <label>Fidelity Bond Link</label>
    <type>Url</type>
</CustomField>