force-app/main/default/objects/Plan__c/fields/Finch_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Finch_Implementation__c</fullName>
    <description>If the Plan&apos;s Implementation record is marked as a Finch Implementation, this box is checked.</description>
    <formula>Account__r.Finch_Implementation__c</formula>
    <inlineHelpText>If the Plan&apos;s Implementation record is marked as a Finch Implementation, this box is checked.</inlineHelpText>
    <label>Finch Implementation</label>
    <type>Checkbox</type>
</CustomField>