force-app/main/default/objects/Plan__c/fields/FPS_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>FPS_Agreement_Signed__c</fullName>
    <description>Date FPS Agree is complete - for plans with FPS in the Implementation docs, it&apos;s the Docs Complete date.   For Plans that didn&apos;t have it in the implementation docs, it is the date of the DocuSign sent to get the FPS signed.</description>
    <inlineHelpText>Date FPS Agree is complete - for plans with FPS in the Implementation docs, it&apos;s the Docs Complete date.   For Plans that didn&apos;t have it in the implementation docs, it is the date of the DocuSign sent to get the FPS signed.</inlineHelpText>
    <label>FPS Agreement Signed</label>
    <type>Date</type>
</CustomField>