force-app/main/default/objects/Plan__c/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <label>Fund List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fund_List</valueSetName>
    </valueSet>
</CustomField>