force-app/main/default/objects/Plan__c/fields/HM_Billing_Score__c.field-meta.xml
<CustomField>
    <fullName>HM_Billing_Score__c</fullName>
    <label>HM Billing Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>