force-app/main/default/objects/Plan__c/fields/HM_NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>HM_NPS_Score__c</fullName>
    <label>HM NPS Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>