force-app/main/default/objects/Plan__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Implementation that set Plan up</description>
    <inlineHelpText>Implementation that set Plan up</inlineHelpText>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>