force-app/main/default/objects/Plan__c/fields/Industry_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS__c</fullName>
    <formula>Account__r.Industry_NAICS__c</formula>
    <label>Industry (NAICS)</label>
    <type>Text</type>
</CustomField>