force-app/main/default/objects/Plan__c/fields/Invoice_Amount_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Past_Due__c</fullName>
    <description>Total Amount that is Past-Due</description>
    <inlineHelpText>Total Amount that is Past-Due</inlineHelpText>
    <label>Invoice Amount Past-Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>