force-app/main/default/objects/Plan__c/fields/Kotapay_Client_Signed__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Client_Signed__c</fullName>
    <description>Client signed – awaiting UBQT Countersign</description>
    <inlineHelpText>Client signed – awaiting UBQT Countersign</inlineHelpText>
    <label>Kotapay Client Signed</label>
    <type>Date</type>
</CustomField>