force-app/main/default/objects/Plan__c/fields/Kotapay_Complete__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Complete__c</fullName>
    <description>All parties signed and doc saved</description>
    <inlineHelpText>All parties signed and doc saved</inlineHelpText>
    <label>Kotapay Complete</label>
    <type>Date</type>
</CustomField>