force-app/main/default/objects/Plan__c/fields/Kotapay_Contract_Declined__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Contract_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client Declined to Sign Kotapay Agreement</description>
    <inlineHelpText>Client Declined to Sign Kotapay Agreement</inlineHelpText>
    <label>Kotapay Contract Declined</label>
    <type>Checkbox</type>
</CustomField>