force-app/main/default/objects/Plan__c/fields/Kotapay_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Deactivated__c</fullName>
    <label>Kotapay Deactivated</label>
    <type>Date</type>
</CustomField>