force-app/main/default/objects/Plan__c/fields/Kotapay_UBQT_Signed__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_UBQT_Signed__c</fullName>
    <description>UBQT Countersign complete and sent to Kotapay</description>
    <inlineHelpText>UBQT Countersign complete and sent to Kotapay</inlineHelpText>
    <label>Kotapay UBQT Signed</label>
    <type>Date</type>
</CustomField>