force-app/main/default/objects/Plan__c/fields/Last_Case_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Activity_Date__c</fullName>
    <description>Date of last Case Activity from a Sponsor or Trustee</description>
    <inlineHelpText>Date of last Case Activity from a Sponsor or Trustee</inlineHelpText>
    <label>Last Case Activity Date</label>
    <type>Date</type>
</CustomField>