force-app/main/default/objects/Plan__c/fields/Last_Case_Outbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Outbound_Activity__c</fullName>
    <description>Date of last outbound activity on a case related to this Plan</description>
    <inlineHelpText>Date of last outbound activity on a case related to this Plan</inlineHelpText>
    <label>Last Case Outbound Activity</label>
    <type>Date</type>
</CustomField>