force-app/main/default/objects/Plan__c/fields/Last_Health_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check_Date__c</fullName>
    <description>Most Recent Date a client health check was performed</description>
    <inlineHelpText>Most Recent Date a client health check was performed</inlineHelpText>
    <label>Last Health Check Date</label>
    <type>Date</type>
</CustomField>