force-app/main/default/objects/Plan__c/fields/Last_Metric_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Metric_Update__c</fullName>
    <description>Date Metrics for Employee/Balance rates were updated</description>
    <inlineHelpText>Date Metrics for Employee/Balance rates were updated</inlineHelpText>
    <label>Last Metric Update</label>
    <type>Date</type>
</CustomField>