force-app/main/default/objects/Plan__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Lead source from Opportunity</description>
    <inlineHelpText>Lead source from Opportunity</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Paid Ads</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Sallus</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Direct Referral</fullName>
            </value>
            <value>
                <fullName>MML</fullName>
            </value>
            <value>
                <fullName>Schwab</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
                <isActive>false</isActive>
                <label>#N/A</label>
            </value>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Advisor</fullName>
                <isActive>false</isActive>
                <label>Advisor</label>
            </value>
            <value>
                <fullName>As(k)</fullName>
                <isActive>false</isActive>
                <label>As(k)</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
                <isActive>false</isActive>
                <label>Financial Institution</label>
            </value>
            <value>
                <fullName>HCM</fullName>
                <isActive>false</isActive>
                <label>HCM</label>
            </value>
            <value>
                <fullName>Member Organization</fullName>
                <isActive>false</isActive>
                <label>Member Organization</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <isActive>false</isActive>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Traditional Payroll</fullName>
                <isActive>false</isActive>
                <label>Traditional Payroll</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>