force-app/main/default/objects/Plan__c/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <description>Dependent LeadSourceDetail field for corresponding Lead Source</description>
    <inlineHelpText>Dependent LeadSourceDetail field for corresponding Lead Source</inlineHelpText>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>X/Twitter</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Bing Ads</fullName>
            </value>
            <value>
                <fullName>ReachMail</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Rep Sourced</fullName>
            </value>
            <value>
                <fullName>IOA</fullName>
            </value>
            <value>
                <fullName>OneDigital</fullName>
            </value>
            <value>
                <fullName>PSIvet</fullName>
            </value>
            <value>
                <fullName>Simply Advisor</fullName>
            </value>
            <value>
                <fullName>Simply Direct</fullName>
            </value>
            <value>
                <fullName>Simply TPA</fullName>
            </value>
            <value>
                <fullName>Envestnet</fullName>
            </value>
            <value>
                <fullName>flexPATH</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
            <value>
                <fullName>Sallus Team</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>AdvisorPro</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Member Organization</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>