force-app/main/default/objects/Plan__c/fields/Legacy_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Service_Type__c</fullName>
    <description>Legacy service types</description>
    <inlineHelpText>Legacy service types</inlineHelpText>
    <label>Legacy Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intuit</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>Blue Chip</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>