force-app/main/default/objects/Plan__c/fields/Matrix_07C_Account__c.field-meta.xml
<CustomField>
    <fullName>Matrix_07C_Account__c</fullName>
    <description>Matrix 07C Account Number</description>
    <inlineHelpText>Matrix 07C Account Number</inlineHelpText>
    <label>Matrix 07C Account #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>