force-app/main/default/objects/Plan__c/fields/Mega_Roth_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mega_Roth_Plan__c</fullName>
    <formula>CONTAINS(TEXT(Service_Option__c), &quot;Mega Roth&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Service Option contains &quot;Mega Roth&quot;, box is checked</inlineHelpText>
    <label>Mega Roth Plan</label>
    <type>Checkbox</type>
</CustomField>