force-app/main/default/objects/Plan__c/fields/Min_Auto_Deferral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Min_Auto_Deferral_Percentage__c</fullName>
    <description>The minimum or starting automatic enrollment percentage</description>
    <inlineHelpText>The minimum or starting automatic enrollment percentage</inlineHelpText>
    <label>Min Auto Deferral Percentage</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>