force-app/main/default/objects/Plan__c/fields/Monthly_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Admin_Fee__c</fullName>
    <description>The subscription amount that the client pays monthly for administration. Add-on recurring fees are not included (New Comp, PCRA, etc)</description>
    <inlineHelpText>The subscription amount that the client pays monthly for administration. Add-on recurring fees are not included (New Comp, PCRA, etc)</inlineHelpText>
    <label>Monthly Admin Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>