force-app/main/default/objects/Plan__c/fields/Monthly_Brokerage_Account_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Brokerage_Account_Fee__c</fullName>
    <description>Amount client pays monthly for brokerage accounts</description>
    <formula>(Number_of_Brokerage_Accounts__c *95)/12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount client pays monthly for brokerage accounts</inlineHelpText>
    <label>Monthly Brokerage Account Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>