force-app/main/default/objects/Plan__c/fields/Monthly_New_Comp_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_New_Comp_Fee__c</fullName>
    <description>Amount client pays for for New Comp monthly.</description>
    <inlineHelpText>Amount client pays for for New Comp monthly.</inlineHelpText>
    <label>Monthly New Comp Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>