force-app/main/default/objects/Plan__c/fields/Monthly_Recurring_Revenue_MRR__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Revenue_MRR__c</fullName>
    <description>Admin+New Comp Fee + Brokerage Fees + Participant Fees</description>
    <formula>Monthly_New_Comp_Fee__c + Monthly_Admin_Fee__c +  Monthly_Brokerage_Account_Fee__c + ( Plan_Billable_Headcount__c * Participant_Fee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin+New Comp Fee + Brokerage Fees + Participant Fees</inlineHelpText>
    <label>Monthly Recurring Revenue(MRR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>