force-app/main/default/objects/Plan__c/fields/Most_Recent_1099R__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_1099R__c</fullName>
    <description>Date of most recent distribution from the plan.   If blank and Abandoned Review has a value, the latest 1099R is either over 12 months ago OR the plan hasn&apos;t had a 1099R</description>
    <inlineHelpText>Date of most recent distribution from the plan.   If blank and Abandoned Review has a value, the latest 1099R is either over 12 months ago OR the plan hasn&apos;t had a 1099R</inlineHelpText>
    <label>Most Recent 1099R</label>
    <type>Date</type>
</CustomField>