force-app/main/default/objects/Plan__c/fields/Most_Recent_Case_Sentiment_S_T__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Case_Sentiment_S_T__c</fullName>
    <description>Most Recent Case Sentiment from a Sponsor/Trustee case</description>
    <inlineHelpText>Most Recent Case Sentiment from a Sponsor/Trustee case</inlineHelpText>
    <label>Most Recent Case Sentiment (S/T)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>