force-app/main/default/objects/Plan__c/fields/Most_Recent_Case_Sentiment_Saver__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Case_Sentiment_Saver__c</fullName>
    <description>Most Recent Case Sentiment from a Saver case</description>
    <inlineHelpText>Most Recent Case Sentiment from a Saver case</inlineHelpText>
    <label>Most Recent Case Sentiment (Saver)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>