force-app/main/default/objects/Plan__c/fields/Most_Recent_CSAT_Score_Saver__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CSAT_Score_Saver__c</fullName>
    <description>Most Recent CSAT Score given by a Saver</description>
    <inlineHelpText>Most Recent CSAT Score given by a Saver</inlineHelpText>
    <label>Most Recent CSAT Score (Saver)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>