force-app/main/default/objects/Plan__c/fields/Most_Recent_CSAT_Score_Sponsor_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_CSAT_Score_Sponsor_Trustee__c</fullName>
    <description>1-5 CSAT score from most recent Resolution CSAT Survey from a Sponsor Trustee or Partner</description>
    <inlineHelpText>1-5 CSAT score from most recent Resolution CSAT Survey from a Sponsor Trustee or Partner</inlineHelpText>
    <label>Most Recent CSAT Score (Sponsor/Trustee)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>