force-app/main/default/objects/Plan__c/fields/Most_Recent_NPS_Score_Saver__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_NPS_Score_Saver__c</fullName>
    <description>Most Recent NPS Score from a Saver</description>
    <inlineHelpText>Most Recent NPS Score from a Saver</inlineHelpText>
    <label>Most Recent NPS Score (Saver)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>