force-app/main/default/objects/Plan__c/fields/Most_Recent_NPS_Score_Sponsor_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_NPS_Score_Sponsor_Trustee__c</fullName>
    <description>Most Recent NPS Score from a Sponsor/Trustee</description>
    <inlineHelpText>Most Recent NPS Score from a Sponsor/Trustee</inlineHelpText>
    <label>Most Recent NPS Score (Sponsor/Trustee)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>