force-app/main/default/objects/Plan__c/fields/Most_Recent_Pay_Period_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pay_Period_Submitted__c</fullName>
    <description>Date Range of most recent pay period submitted.</description>
    <inlineHelpText>Date Range of most recent pay period submitted.</inlineHelpText>
    <label>Most Recent Pay Period Submitted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>