force-app/main/default/objects/Plan__c/fields/Most_Recent_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll__c</fullName>
    <description>Date client last submitted a payroll to Ubiquity.   Copied from Payroll section of the plan record.</description>
    <formula>Most_Recent_Payroll_Submitted__c</formula>
    <inlineHelpText>Date client last submitted a payroll to Ubiquity.   Copied from Payroll section of the plan record.</inlineHelpText>
    <label>Most Recent Payroll</label>
    <type>Date</type>
</CustomField>