force-app/main/default/objects/Plan__c/fields/Most_Recent_Payroll_Compensation_Total__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll_Compensation_Total__c</fullName>
    <description>Most recent amount of compensation on payroll.</description>
    <inlineHelpText>Most recent amount of compensation on payroll.</inlineHelpText>
    <label>Most Recent Payroll Compensation Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>