force-app/main/default/objects/Plan__c/fields/Most_Recent_Payroll_Contribution_Total__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll_Contribution_Total__c</fullName>
    <description>Amount of most recent payroll contribution.</description>
    <inlineHelpText>Amount of most recent payroll contribution.</inlineHelpText>
    <label>Most Recent Payroll Contribution Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>