force-app/main/default/objects/Plan__c/fields/Most_Recent_Review_Saver__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Review_Saver__c</fullName>
    <description>Most recent review given by a saver.</description>
    <inlineHelpText>Most recent review given by a saver.</inlineHelpText>
    <label>Most Recent Review (Saver) - Deprecated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>